--- a/Analysis_1.ipynb
+++ b/Analysis_1.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "db = mysql.connector.connect(host = \"localhost\",\n",
     "                            username = \"root\",\n",
-    "                            password = \"Adithya@6691\",\n",
+    "                            password = \"password\",\n",
     "                            database = \"ecommerece_project\")\n",
     "\n",
     "cur = db.cursor()\n",
